creditors mobile, on table 'loan properties', adjusting logo size, line spacing and icon bug

--- a/src/app/sections/creditors/loan-properties/loan-properties.component.scss
+++ b/src/app/sections/creditors/loan-properties/loan-properties.component.scss
@@ -138,7 +138,7 @@ h6 {
 			align-items: center;
 			margin-bottom: 2%;
 			.img-box {
-				width: 40px;
+				width: 35px;
 				height: auto;
 				margin-right: 2%;
 		}
@@ -165,7 +165,7 @@ h6 {
 		justify-content: space-between;
 		align-items: flex-start;
 		width: 100%;
-		margin: 2% 0;
+		margin: 4% 0;
 		.col-1 {
 			width: 60%;
 			display:flex;
@@ -182,6 +182,12 @@ h6 {
 }
 
 .fas {
+	margin-right: 12px;
+	font-size: 20px;
+	display: none;
+}
+
+.far {
 	margin-right: 12px;
 	font-size: 20px;
 	display: none;
